@@ -2,6 +2,8 @@
 
 	* slime.el (slime-edit-definition): Don't ask the user for a name
 	to search if it's missing before running slime-edit-definition-hooks
+	(slime-open-inspector): pop-to-buffer before inserting anything,
+	otherwise the point is not moved into the desired position.
 
 2012-11-13  Francois-Rene Rideau <tunes@google.com>
 
